--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "App-Frontend",
+  "name": "app-frontend",
   "type": "module",
   "private": true,
   "scripts": {
@@ -12,10 +12,25 @@
   "dependencies": {
     "@nuxt/icon": "2.1.0",
     "@nuxt/image": "2.0.0",
+    "@pinia/nuxt": "^0.11.3",
+    "@vueuse/core": "^14.1.0",
     "better-sqlite3": "^12.5.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.555.0",
     "nuxt": "^4.2.1",
+    "pinia": "^3.0.4",
+    "tailwind-merge": "^3.4.0",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
   },
-  "packageManager": "pnpm@10.17.0+sha512.fce8a3dd29a4ed2ec566fb53efbb04d8c44a0f05bc6f24a73046910fb9c3ce7afa35a0980500668fa3573345bd644644fa98338fa168235c80f4aa17aa17fbef"
+  "packageManager": "pnpm@10.17.0+sha512.fce8a3dd29a4ed2ec566fb53efbb04d8c44a0f05bc6f24a73046910fb9c3ce7afa35a0980500668fa3573345bd644644fa98338fa168235c80f4aa17aa17fbef",
+  "devDependencies": {
+    "@nuxtjs/tailwindcss": "^6.14.0",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "shadcn-nuxt": "^2.4.0",
+    "tailwindcss": "3.4.17",
+    "tailwindcss-animate": "^1.0.7"
+  }
 }
