--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/image": "2.0.0",
     "@pinia/nuxt": "^0.11.3",
     "@vueuse/core": "^14.1.0",
+    "axios": "^1.13.2",
     "better-sqlite3": "^12.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
